# OptiRetain

./: .gitignore  README.md  main.py  plan.md  pyproject.toml  requirements.txt  test.ipynb
dashboard/: app.js  index.html  styles.css
models/: dml_cate_metadata.json  risk_radar.pkl  risk_radar_metadata.json  risk_radar_raw.joblib
src/optiretain/: config.py  pipeline.py
src/optiretain/data/: features.py  loader.py
src/optiretain/export/: dashboard_json.py
src/optiretain/optimize/: knapsack.py
src/optiretain/risk/: explain_shap.py  train_xgb.py
src/optiretain/uplift/: dml_cate.py  segmentation.py
tests/: conftest.py  fixtures.py  test_dml.py  test_knapsack.py  test_loader.py  test_risk_model.py  test_segmentation.py
