[project]
name = "optiretain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dowhy>=0.14",
    "econml>=0.16.0",
    "lightgbm>=4.6.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pulp>=3.3.2",
    "pyarrow>=24.0.0",
    "pytest>=9.0.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.17.1",
    "shap>=0.48.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
